@@ -2,6 +2,12 @@ plugins {
     id 'java'
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
 subprojects {
     apply plugin: 'java'
 
@@ -18,20 +24,22 @@ subprojects {
     }
 
     dependencies {
-        implementation          'javax.annotation:javax.annotation-api:1.3.2'
-        implementation          'org.apache.logging.log4j:log4j-api:2.20.0'
-        implementation          'org.apache.logging.log4j:log4j-core:2.20.0'
-        runtimeOnly             'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
-        implementation          'org.apache.commons:commons-lang3:3.12.0'
-        compileOnly             'org.projectlombok:lombok:1.18.34'
-        testCompileOnly         'org.projectlombok:lombok:1.18.34'
-        annotationProcessor     'org.projectlombok:lombok:1.18.34'
-        testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
+        implementation          libs.annotation.api
+        implementation          libs.apache.commons
+        implementation          libs.log4j.api
+        implementation          libs.log4j.core
+        runtimeOnly             libs.log4j.slf4j.impl
+        compileOnly             libs.lombok
+        testCompileOnly         libs.lombok
+        annotationProcessor     libs.lombok
+        testAnnotationProcessor libs.lombok
+        testImplementation      libs.mockito.core
+        testImplementation      libs.testng
+
     }
 
-    test {
+    tasks.withType(Test).configureEach {
         useTestNG()
-        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
     }
 
 }
